--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "GitHub Actions for Hugo",
   "main": "lib/index.js",
   "engines": {
-    "node": ">=12.14.1",
-    "npm": ">=6.13.7"
+    "node": ">=16.17.1",
+    "npm": ">=8.15.0"
   },
   "scripts": {
     "all": "npm run format:check && npm run lint && npm test",
@@ -50,26 +50,26 @@
     "@actions/core": "^1.6.0",
     "@actions/exec": "^1.1.1",
     "@actions/io": "^1.1.0",
-    "@actions/tool-cache": "^1.7.2",
-    "node-fetch": "^2.6.1"
+    "@actions/tool-cache": "^2.0.1",
+    "node-fetch": "^2.6.7"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.20",
-    "@types/node": "~12",
-    "@types/node-fetch": "^2.5.8",
+    "@types/jest": "^29.1.2",
+    "@types/node": "16.11.65",
+    "@types/node-fetch": "^2.6.2",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
     "@vercel/ncc": "^0.27.0",
     "eslint": "^7.21.0",
     "eslint-plugin-jest": "^24.1.5",
     "husky": "^5.1.3",
-    "jest": "^26.6.3",
-    "jest-circus": "^26.6.3",
+    "jest": "^29.1.2",
+    "jest-circus": "^29.1.2",
     "lint-staged": "^10.5.4",
     "nock": "^13.0.10",
     "prettier": "2.2.1",
     "standard-version": "^9.1.1",
-    "ts-jest": "^26.5.3",
-    "typescript": "^4.2.3"
+    "ts-jest": "^29.0.3",
+    "typescript": "^4.8.4"
   }
 }
